[feat] List 기반 컬렉션을 Set으로 변경하여 중복 방지